# SkillsDynamix-ChatBot

./: .env  pyproject.toml
app/: app.py  llm.py  requirements.txt  retriever.py
app/utils/: system_prompt.py
chroma_db/: chroma.sqlite3
notebook/: 01.ipynb  retriever & testing.ipynb
src/data/: 1_extracting_data_from_website.py
